--- a/branch/hud/index.html
+++ b/branch/hud/index.html
@@ -17,10 +17,6 @@
 
 	<body>
 		<script src="variables.js"></script>
-		<script src="layer.js"></script>
-		<script src="component.js"></script>
-		<script src="slot.js"></script>
-		<script src="item.js"></script>
-		<script src="main.js"></script>
+		<script src="main.js" type="module"></script>
 	</body>
 </html>
