Layer update on index

--- a/branch/main/index.html
+++ b/branch/main/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+		<link rel="stylesheet" href="../../assets/css/main.css">
 		<!-- Avoid favicon requests/warnings in the console (development purposes) -->
 		<link rel="icon" href="data:;base64,=">
 		<script src="main.js" type="module"></script>
