Main page update

--- a/branch/main/index.html
+++ b/branch/main/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="../../assets/css/main.css">
 		<!-- Avoid favicon requests/warnings in the console (development purposes) -->
 		<link rel="icon" href="data:;base64,=">
+		<style>body {background-color: #595645}</style>
 		<script src="main.js" type="module"></script>
 	</head>
 
