--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<script src="assets/js/player.js" defer></script>
 		<script src="assets/js/gui/component.js" defer></script>
 		<script src="assets/js/gui/item.js" defer></script>
-		<script src="assets/js/gui/tooltip.js" defer></script>
+		<!-- <script src="assets/js/gui/tooltip.js" defer></script> -->
 		<script src="assets/js/block.js" defer></script>
 		<script src="assets/js/gui/debug.js" defer></script>
 		<script src="assets/js/render.js" defer></script>
@@ -35,5 +35,12 @@
 
 	<body onselectstart="return false">
 		<div class="slots"></div>
+		<div class="pages">
+			Branches
+			<ul>
+				<li><a href="branch/main">New code structure</a></li>
+				<li><a href="branch/hud">Indev HUD</a></li>
+			</ul>
+		</div>
 	</body>
 </html>
