--- a/branch/hud/index.html
+++ b/branch/hud/index.html
@@ -1,22 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="../../assets/css/main.css">
 		<!-- Avoid favicon requests/warnings in the console (development purposes) -->
 		<link rel="icon" href="data:;base64,=">
-		<style>
-			body {
-				display: flex;
-				justify-content: center;
-				background-color: #595645;
-			}
-		</style>
+		<script src="main.js" type="module"></script>
 	</head>
 
-	<body>
-		<script src="variables.js"></script>
-		<script src="main.js" type="module"></script>
-	</body>
+	<body></body>
 </html>
