Tooltip branch & hoverable slots

--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
 	<body onselectstart="return false">
 		<div class="slots"></div>
 		<div class="pages">
-			Branches
-			<ul>
-				<li><a href="branch/hud">Indev HUD</a></li>
-			</ul>
+			Test Branches<br>
+			<a href="branch/hud">HUD</a>
+			<a href="branch/tooltip">Tooltip</a>
 		</div>
 	</body>
 </html>
