Tooltip when hovering items

--- a/branch/tooltip/index.html
+++ b/branch/tooltip/index.html
@@ -10,5 +10,7 @@
 		<script src="main.js" type="module"></script>
 	</head>
 
-	<body></body>
+	<body>
+		<div class="tooltip"></div>
+	</body>
 </html>
