--- a/branch/hud/index.html
+++ b/branch/hud/index.html
@@ -6,6 +6,9 @@
 		<link rel="stylesheet" href="../../assets/css/main.css">
 		<!-- Avoid favicon requests/warnings in the console (development purposes) -->
 		<link rel="icon" href="data:;base64,=">
+		<style>
+			body {background-color: #000}
+		</style>
 		<script src="main.js" type="module"></script>
 	</head>
 
