--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
 	<body onselectstart="return false">
 		<div class="slots"></div>
 		<div class="pages">
-			Test Branches<br>
-			<a href="branch/hud">HUD</a>
-			<a href="branch/tooltip">Tooltip</a>
+			Branches<br>
+			<a href="branch/hud">HUD (needs fix)</a>
+			<a href="branch/tooltip">Tooltip (needs fix)</a>
+			<a href="branch/tooltip_fork">Responsive GUI</a>
 		</div>
 	</body>
 </html>
