Debug FPS + fixes

--- a/branch/tooltip_fork/index.html
+++ b/branch/tooltip_fork/index.html
@@ -6,9 +6,14 @@
 		<link rel="stylesheet" href="../../assets/css/main.css">
 		<!-- Avoid favicon requests/warnings in the console (development purposes) -->
 		<link rel="icon" href="data:;base64,=">
-		<style>body {background-color: tan}</style>
+		<style>body {background-color: #7b7e7f}</style>
 		<script src="main.js" type="module"></script>
 	</head>
 
 	<body></body>
 </html>
+
+<!--
+	Debug background color: #080400, .21
+	Chat bakground color: #000000, .495
+-->
