--- a/branch/tooltip_fork/index.html
+++ b/branch/tooltip_fork/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="../../assets/css/main.css">
 		<!-- Avoid favicon requests/warnings in the console (development purposes) -->
 		<link rel="icon" href="data:;base64,=">
-		<style>body {background-color: #7b7e7f}</style>
+		<style>body {background-color: #555}</style>
 		<script src="main.js" type="module"></script>
 	</head>
 
