Tooltip & slot hovering

--- a/branch/gui/index.html
+++ b/branch/gui/index.html
@@ -4,13 +4,16 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="../../assets/css/main.css">
+		<link rel="stylesheet" href="../../assets/css/tooltip.css">
 		<!-- Avoid favicon requests/warnings in the console (development purposes) -->
 		<link rel="icon" href="data:;base64,=">
 		<style>body {background-color: #555}</style>
 		<script src="main.js" type="module"></script>
 	</head>
 
-	<body></body>
+	<body>
+		<div class="tooltip"></div>
+	</body>
 </html>
 
 <!--
