--- a/index.html
+++ b/index.html
@@ -4,36 +4,12 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="author" content="Hritik RC, Mattéo Legagneux">
-		<meta name="version" content="rd-132211">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="author" content="Mattéo Legagneux">
+		<link rel="icon" href="favicon.ico">
 		<link rel="stylesheet" href="assets/css/main.css">
-		<link rel="icon" type="image/x-icon" href="favicon.ico">
-		<link rel="apple-touch-icon" type="image/x-icon" href="favicon.ico">
-		<script src="assets/lib/three/three.js"></script>
-		<script src="assets/lib/three/PointerLockControls.js"></script>
-		<script src="assets/lib/perlin.js"></script>
-		<script src="assets/lib/stats.js"></script>
-		<script src="assets/js/variables.js" defer></script>
-		<script src="assets/js/gui/layer.js" defer></script>
-		<script src="assets/js/gui/slot.js" defer></script>
-		<script src="assets/js/player.js" defer></script>
-		<script src="assets/js/gui/component.js" defer></script>
-		<script src="assets/js/gui/item.js" defer></script>
-		<!-- <script src="assets/js/gui/tooltip.js" defer></script> -->
-		<script src="assets/js/block.js" defer></script>
-		<script src="assets/js/gui/debug.js" defer></script>
-		<script src="assets/js/render.js" defer></script>
-		<script src="assets/js/update.js" defer></script>
-		<script src="assets/js/events.js" defer></script>
-		<script src="assets/js/game.js" defer></script>
-		<script src="assets/js/gui/hud.js" defer></script>
-		<script src="assets/js/main.js" defer></script>
-		<!-- <script src="assets/js/gui/stats.js" defer></script> -->
+		<script src="assets/js/main.js" type="module"></script>
 		<title>Minecraft</title>
 	</head>
 
-	<body onselectstart="return false">
-		<div class="slots"></div>
-	</body>
+	<body></body>
 </html>
