--- a/test.html
+++ b/test.html
@@ -1,4 +1,12 @@
 <style>
+	body {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		height: 100%;
+		margin: 0;
+		background-color: #000;
+	}
 	canvas {
 		background-color: #8D8D8D;
 		image-rendering: -moz-crisp-edges;
