--- a/branch/gui/index.html
+++ b/branch/gui/index.html
@@ -3,8 +3,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="../../assets/css/main.css">
-		<link rel="stylesheet" href="../../assets/css/tooltip.css">
+		<link rel="stylesheet" href="../../assets/old/css/main.css">
+		<link rel="stylesheet" href="../../assets/old/css/tooltip.css">
 		<!-- Avoid favicon requests/warnings in the console (development purposes) -->
 		<link rel="icon" href="data:;base64,=">
 		<style>body {background-color: #555}</style>
