Restored index page

--- a/index.html
+++ b/index.html
@@ -4,12 +4,36 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="author" content="Mattéo Legagneux">
-		<link rel="icon" href="favicon.ico">
-		<link rel="stylesheet" href="assets/css/main.css">
-		<script src="assets/js/main.js" type="module"></script>
+		<meta name="author" content="Hritik RC, Mattéo Legagneux">
+		<meta name="version" content="rd-132211">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<link rel="stylesheet" href="assets/old/css/main.css">
+		<link rel="icon" type="image/x-icon" href="favicon.ico">
+		<link rel="apple-touch-icon" type="image/x-icon" href="favicon.ico">
+		<script src="assets/old/lib/three/three.js"></script>
+		<script src="assets/old/lib/three/PointerLockControls.js"></script>
+		<script src="assets/old/lib/perlin.js"></script>
+		<script src="assets/old/lib/stats.js"></script>
+		<script src="assets/old/js/variables.js" defer></script>
+		<script src="assets/old/js/gui/layer.js" defer></script>
+		<script src="assets/old/js/gui/slot.js" defer></script>
+		<script src="assets/old/js/player.js" defer></script>
+		<script src="assets/old/js/gui/component.js" defer></script>
+		<script src="assets/old/js/gui/item.js" defer></script>
+		<!-- <script src="assets/old/js/gui/tooltip.js" defer></script> -->
+		<script src="assets/old/js/block.js" defer></script>
+		<script src="assets/old/js/gui/debug.js" defer></script>
+		<script src="assets/old/js/render.js" defer></script>
+		<script src="assets/old/js/update.js" defer></script>
+		<script src="assets/old/js/events.js" defer></script>
+		<script src="assets/old/js/game.js" defer></script>
+		<script src="assets/old/js/gui/hud.js" defer></script>
+		<script src="assets/old/js/main.js" defer></script>
+		<!-- <script src="assets/old/js/gui/stats.js" defer></script> -->
 		<title>Minecraft</title>
 	</head>
 
-	<body></body>
+	<body onselectstart="return false">
+		<div class="slots"></div>
+	</body>
 </html>
