Disabled state on the Button component

--- a/branch/gui/button/index.html
+++ b/branch/gui/button/index.html
@@ -15,13 +15,12 @@
 
 			.layer {
 				position: absolute;
+				background-color: #000000C2;
 				image-rendering: -moz-crisp-edges;
 				image-rendering: -webkit-crisp-edges;
 				image-rendering: pixelated;
 				image-rendering: crisp-edges;
 			}
-
-			.layer.pause {background-color: #000000C2}
 		</style>
 		<script src="main.js" type="module"></script>
 		<title>Button test</title>
