--- a/branch/gui/button/index.html
+++ b/branch/gui/button/index.html
@@ -17,19 +17,21 @@
 				--scale: 2px;
 			}
 
-			.layer {
-				position: absolute;
-				background-color: #000000C2;
+			canvas {
 				image-rendering: -moz-crisp-edges;
 				image-rendering: -webkit-crisp-edges;
 				image-rendering: pixelated;
 				image-rendering: crisp-edges;
 			}
 
+			.layer {
+				position: absolute;
+				background-color: #000000C2;
+			}
+
 			#tooltip {
-				margin: auto;
-				padding: var(--scale);
-				padding-bottom: calc(3 * var(--scale));
+				padding: calc(2 * var(--scale));
+				padding-bottom: 0;
 				position: absolute;
 				border: var(--scale) solid;
 				border-image-slice: 1;
