--- a/branch/gui/index.html
+++ b/branch/gui/index.html
@@ -26,7 +26,7 @@
 
 			.layer {
 				position: absolute;
-				background-color: #000000C2;
+				/*background-color: #000000C2;*/
 			}
 
 			#tooltip {
