--- a/branch/gui2/index.html
+++ b/branch/gui2/index.html
@@ -7,9 +7,7 @@
 		<meta name="author" content="Mattéo Legagneux">
 		<link rel="icon" href="../../favicon.ico">
 		<style>
-			:root {
-				--scale: 2px;
-			}
+			:root {--scale: 2px}
 
 			body {
 				margin: 0;
