--- a/branch/gui/index.html
+++ b/branch/gui/index.html
@@ -24,10 +24,7 @@
 				image-rendering: crisp-edges;
 			}
 
-			.layer {
-				position: absolute;
-				background-color: #000000C2;
-			}
+			.layer {position: absolute}
 
 			#tooltip {
 				padding: calc(2 * var(--scale));
